syntax = "proto3";

import "google/protobuf/empty.proto";

service InfoServer {
    rpc GetRobot (RobotQuery) returns (Robot) {}
    rpc GetRobots (RobotsQuery) returns (stream Robot) {}
    rpc RegisterRobot (RegisterRobotQuery) returns (google.protobuf.Empty) {}
    rpc UnregisterRobot (UnregisterRobotQuery) returns (google.protobuf.Empty) {}
    rpc ToggleRobot (ToggleRequest) returns (google.protobuf.Empty) {}
    rpc CalibrateRobot (CalibrationRequest) returns (Robot) {}
    rpc GetCalibration(RobotQuery) returns (CalibrationParameters) {}
    rpc SetUsecase(SetUsecaseRequest) returns (Robot) {}
    rpc RangeRobot(RangeRequest) returns (google.protobuf.Empty) {}
    rpc RenameRobot(RenameRobotRequest) returns (google.protobuf.Empty) {}
    rpc GetUsecases(google.protobuf.Empty) returns (stream Usecase) {} 
}

message RobotsQuery {
    string userId = 1;
}

message RobotQuery {
    string id = 1;
    string userId = 2;
}

message RegisterRobotQuery {
    string id = 1;
    string userId = 2;
    string nickname = 3;
    string robotType = 4;
}

message UnregisterRobotQuery {
    string id = 1;
    string userId = 2;
}

message ToggleRequest {
    string id = 1;
    string userId = 2;
    bool value = 3;
    bool force = 4;
}

message RangeRequest {
    string id = 1;
    string userId = 3;
    int64 value = 2;
}

message Robot {
    string id = 1;
    string nickname = 2;
    string robotType = 3;
    string interfaceType = 4;

    oneof robotStatus {
        ToggleStatus toggleStatus = 5;
        RangeStatus rangeStatus = 6;
    };
}

message ToggleStatus {
    bool value = 1;
}

message RangeStatus {
    int64 max = 1;
    int64 min = 2;
    int64 current = 3;
}

message CalibrationRequest {
    string id = 1;
    string robotId = 5;
    string userId = 3;
    oneof value {
        bool boolValue = 2;
        int64 intValue = 4;
    }
}

message IntDetails {
    int64 min = 1;
    int64 max = 2;
    int64 current = 3;
    int64 default = 4;
}

message BoolDetails {
    bool current = 3;
    bool default = 4;
}

message CalibrationParameter {
    string id = 1;
    string name = 4;
    string type = 5;
    string description = 6;
    oneof details {
        IntDetails intDetails = 2;
        BoolDetails boolDetails = 3;
    }
}

message CalibrationParameters {
    repeated CalibrationParameter parameters = 1;
}

message SetUsecaseRequest {
    string id = 1;
    string userId = 3;
    string usecase = 2;
}

message RenameRobotRequest {
    string id = 1;
    string userId = 2;
    string newNickname = 3;
}

message Usecase {
    string id = 1;
    string name = 2;
    string description = 3;
}