syntax = "proto3";

import "google/protobuf/empty.proto";

service UserServer {
    rpc Register(RegisterRequest) returns (google.protobuf.Empty) {}
    rpc Login(LoginRequest) returns (Token) {}
    rpc Authorize(Token) returns (User) {}
}

message RegisterRequest {
    string email = 1;
    string password = 2;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message Token {
    string token = 1;
}

message User {
    string id = 1;
}